# shadowrocker_config-tg_updater

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
bot/: config.py  main.py  metrics.py
bot/handlers/: add_rule.py  cancel.py  delete_rule.py  normalize.py  start.py  url_check.py  view_config.py
bot/keyboards/: confirm.py  main_menu.py  pagination.py  policy.py  rule_type.py
bot/middlewares/: access.py  logging.py
bot/models/: enums.py
bot/services/: github_store.py  rules_file.py
bot/utils/: logger.py
bot/validators/: domain.py  ip.py  keyword.py
tests/: conftest.py
tests/e2e/: test_view_flow.py
tests/integration/: test_github_store.py  test_github_store_errors.py
tests/unit/: test_access_middleware.py  test_access_warning.py  test_add_duplicate_logic.py  test_add_rule_policy_flow.py  test_cancel.py  test_cancel_handler.py  test_commit_buttons.py  test_config.py  test_delete_handler.py  test_delete_sorting.py  test_delete_validation.py  test_domain_label_validation.py  test_domain_length_validation.py  test_github_logging.py  test_github_recent_commits.py  test_github_retry.py  test_handlers_add.py  test_handlers_add_more.py  test_handlers_delete.py  test_handlers_delete_more.py  test_handlers_view.py  test_keyboards.py  test_loading_indicators.py  test_metrics.py  test_metrics_labels.py  test_network_errors.py  test_normalize_errors.py  test_policy_support.py  test_recent_command.py  test_rules_file.py  test_rules_immutability.py  test_rules_ops.py  test_shutdown.py  test_stats_command.py  (+5 more)
