[project]
name = "shadowrocker-config-tg-updater"
version = "0.1.0"
description = "Telegram bot to manage Shadowrocket rules in GitHub"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "aiogram>=3.4.0,<4.0.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.1",
  "publicsuffix2>=2.20190812",
  "prometheus-client>=0.20.0",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
# Development / test-only deps
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "aioresponses>=0.7.6"
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: integration tests hitting external boundaries via mocks",
  "e2e: high-level functional tests"
]

[tool.uv]
# Use a local .venv
index-url = "https://pypi.org/simple"

[tool.uv.workspace]
# Keep venv inside project
